Version 1.9.0
(?? ??? 20??, from /branches/1.9.x)
http://svn.apache.org/repos/asf/subversion/tags/1.9.0

 User-visible changes:
  - General:

  - Major new features:

  - Minor new features and improvements:

  - Client-side bugfixes:

  - Server-side bugfixes:

  - Other tool improvements and bugfixes:

 Developer-visible changes:
  - General:

  - API changes:

  - Bindings:


Version 1.8.0
(?? ??? 2013, from /branches/1.8.x)
http://svn.apache.org/repos/asf/subversion/tags/1.8.0

 User-visible changes:
  - General:
    *

  - Major new features:
    * inheritable properties (r1395109)
    * GPG agent support. (r1151069)
    * fsfs: Packing of revision property shards (issue #3944)
    * explicit handling of local moves/renames (issue #3631, #4232)
    * new more detailed conflict storage
    * use svn_ra_serf as our new http library.
    * automatic merge avoids explicit reintegration merges.

  - Minor new features and improvements:
    * new 'svnadmin load --revision' load filtering support (issue #3734)
    * new 'commit --include-externals' option (related to issues #1167, #3563)
    * new '--include-externals' option for 'svn list' (issue #4225)
    * remove extraneous externals output from 'svn status -q' (issue #1935)
    * new 'svnadmin hotcopy --incremental' support for FSFS (issue #3815)
    * reject some attempts to merge between unrelated branches (r1215273)
    * support GPG agent for password storage on UNIX-like platforms (r1150783)
    * new 'svnadmin lock' / 'svnadmin unlock' subcommands (issue #3942, #4092)
    * new SVNUseUTF8 configuration option for mod_dav_svn (issue #2487)
    * new SVNHooksEnv configuration option for mod_dav_svn (r1239966)
    * new --ignore-properties option for 'svn diff' (r1239553. -617)
    * new --properties-only option for 'svn diff' (r1336110)
    * new --patch-compatible option for 'svn diff' (r1239561)
    * new --no-diff-added option for 'svn diff' (r1433958)